# adsmt

./: .gitattributes  .gitignore  .gitmodules  ABSORPTION_PLAN.md  CONTRIBUTIONS_AUDIT.md  Cargo.toml  DOC_AUDIT.md  LICENSE-BSD.txt  PORTFOLIO.md  PUBLISH_AUDIT.md  README.md  justfile
.claude-conversations/: 2026-05-12-smt-solver-design.md  2026-05-14-v0.15-and-P4-cycle.md  precompact-backups-11.md  precompact-backups-12.md  precompact-backups-13.md  precompact-backups-14.md  precompact-backups-15.md  precompact-backups-16.md  precompact-backups-17.md
.claude-memories/: MEMORY.md  abductive_smtlib_surface.md  adsmt_contrib_repo.md  adsmt_emit_system.md  adsmt_lean_binding_repo.md  aot_jit_profile_finding.md  design_conversation.md  feedback_arc_slice_over_arc_vec.md  feedback_copyright_holder.md  feedback_dynasm_min_version.md  feedback_hashcons_hot_paths.md  feedback_long_test_runs.md  feedback_oxiz_bindings_split.md  feedback_roundtrip_through_real_producer.md  feedback_soundness_opaque_fallback.md  feedback_stable_signoff_user_approval.md  feedback_streaming_no_exit_on_command_error.md  ho_sld_nonpattern_deferral.md  jit_aot_replay_section_3_5.md  l3_callback_minimum_set.md  local_requests_inbox.md  logicutils_version_rule.md  lsp_roadmap.md  nbg_fol_hol_challenge.md  oxilean_syntax_investigation.md  oxiz_mbqi_rewrite.md  oxiz_redesign_verification_pipeline.md  oxiz_relationship.md  oxiz_sat_core_redesign.md  project_cycle_versioning.md  project_layout.md  prover_emit_policy.md  (+3 more)
adsmt-cert/: CERT_POLICY.md  Cargo.toml
adsmt-cert/src/: canonical.rs  drat.rs  emit.rs  lean_emit.rs  lib.rs  oxiz_drat_bridge.rs  recorder.rs  witness.rs
adsmt-cert/src/prover_emit/: common.rs  drat_payload.rs  lfsc_parse.rs  mod.rs
adsmt-cert/tests/: cert_surface.rs
adsmt-class/: Cargo.toml
adsmt-class/src/: fundep.rs  instance.rs  lib.rs  matcher.rs  relation.rs  resolve.rs  tclass.rs
adsmt-cli/: Cargo.toml
adsmt-cli/src/: main.rs
adsmt-cli/tests/: streaming_robustness.rs  theory_abduction.rs  theory_abduction_delegation.rs
adsmt-core/: Cargo.toml
adsmt-core/src/: lib.rs  rule.rs  serde_impl.rs  term.rs  theorem.rs  ty.rs
adsmt-emit/adsmt-emit-cli/: Cargo.toml
adsmt-emit/adsmt-emit-cli/src/: main.rs
adsmt-emit/adsmt-emit-cli/tests/: end_to_end.rs
adsmt-emit/adsmt-emit-contract/: Cargo.toml
adsmt-emit/adsmt-emit-contract/src/: lib.rs
adsmt-emit/adsmt-emit-contract/wit/: emitter.wit
adsmt-emit/adsmt-emit-lean/: Cargo.toml  lean.adsmt-emit
adsmt-emit/adsmt-emit-lean/src/: main.rs
adsmt-emit/adsmt-emit-lean/tests/: emit.rs
adsmt-emit/adsmt-emit-pm/: Cargo.toml
adsmt-emit/adsmt-emit-pm/src/: build.rs  codec.rs  lib.rs  lockfile.rs  manifest.rs  package.rs  resolver.rs  store.rs
adsmt-emit/adsmt-emit-runtime/: Cargo.toml
adsmt-emit/adsmt-emit-runtime/src/: lib.rs  script.rs  wasm.rs
adsmt-emit/adsmt-env/: Cargo.toml
adsmt-emit/adsmt-env/src/: lib.rs  main.rs
adsmt-emit/adsmt-env/tests/: trampoline.rs
adsmt-engine/: Cargo.toml
adsmt-engine/benches/: cdcl_smoke.rs  solver_smoke.rs
adsmt-engine/src/: bool_solver.rs  bv_blast.rs  cadical_backend.rs  cdcl.rs  cnf.rs  dpllt.rs  drat_trim.rs  lib.rs  oxiz_backend.rs  oxiz_drat.rs  oxiz_drat_bridge.rs  oxiz_proof_emit.rs  proof_bridge.rs  quant.rs  quant_conflict.rs  result.rs  solver.rs  state.rs
adsmt-ffi/: ABI_POLICY.md  Cargo.toml
adsmt-ffi/include/: adsmt.h
adsmt-ffi/src/: lib.rs
adsmt-ffi/tests/: c_abi_surface.rs
adsmt-heuristic-checker/: Cargo.toml  breaking_history.txt  build.rs
adsmt-heuristic-checker-macros/: Cargo.toml
adsmt-heuristic-checker-macros/src/: lib.rs
adsmt-heuristic-checker/minimum-table/: minimum.kb
adsmt-heuristic-checker/src/: breaking_versions.rs  cache.rs  fragment.rs  lib.rs  sigma_check.rs
adsmt-heuristic-checker/tests/: cache_layout.rs  macros_smoke.rs  property_versions.rs  snapshot_regression.rs
adsmt-heuristic-checker/tests/fixtures/: minimum_table_shape.kb
adsmt-heuristic-checker/tests/snapshots/: README.md
adsmt-heuristic-checker/tests/snapshots/v0.17.0/: breaking-versions.txt
adsmt-heuristic-checker/tests/snapshots/v0.21.0/: breaking-versions.txt
adsmt-jit/: Cargo.toml
adsmt-jit/src/: cache.rs  cdcl.rs  cdcl_io.rs  guard.rs  kernel.rs  lib.rs  registry.rs  trace.rs
adsmt-lints/: Cargo.toml  README.md
adsmt-lints/src/: lib.rs
adsmt-lsp/: Cargo.toml  RUNTIME_SMOKE.md
adsmt-lsp/src/: lib.rs  main.rs
adsmt-lsp/tests/: scaffold.rs
adsmt-meta/: Cargo.toml  FEATURE_MATRIX.md
adsmt-meta/src/: lib.rs
adsmt-parser/: Cargo.toml  DIALECT_POLICY.md
adsmt-parser/src/: convert.rs  kb.rs  lib.rs  sexpr.rs  smtlib.rs
adsmt-parser/tests/: dialect_surface.rs
adsmt-parsers/adsmt-parser-lfsc-drat/: Cargo.toml
adsmt-parsers/adsmt-parser-lfsc-drat/src/: drat.rs  lib.rs
adsmt-parsers/adsmt-parser-smtlib2/: Cargo.toml  DIALECT_POLICY.md
adsmt-parsers/adsmt-parser-smtlib2/src/: lib.rs  sexpr.rs  smtlib.rs
adsmt-parsers/adsmt-parser-smtlib2/tests/: dialect_surface.rs
adsmt-shims/adsmt-shim-lu-kb/: Cargo.toml
adsmt-shims/adsmt-shim-lu-kb/src/: lib.rs
adsmt-theory/: Cargo.toml
adsmt-theory-finite-field/: Cargo.toml
adsmt-theory-finite-field/src/: bitpacked.rs  bp_polynomial.rs  bp_sat_encoder.rs  buchberger.rs  f4.rs  f4_symbolic.rs  lib.rs  monomial.rs  polynomial.rs  reduction.rs  sat_encoder.rs  theory_plugin.rs
adsmt-theory/src/: arith.rs  arith_simplex.rs  arrays.rs  bv.rs  datatypes.rs  egraph_theory.rs  lib.rs  polite.rs  trait_.rs  uf.rs
adsmt-theory/tests/: compat_audit.rs  push_pop_audit.rs
freshcheck/: Cargo.toml
lean/: Adsmt.lean  (+5 more)
logicutils-translator-to-oxiz-sat/: Cargo.toml
logicutils-translator-to-oxiz-sat/src/: lib.rs
logicutils-translator-to-oxiz-sat/tests/: minimum_table_validates.rs
lu-common/: Cargo.toml
lu-common/src/: hash.rs  k12.rs  lib.rs  migration.rs  store.rs
lu-common/src/kb/: mod.rs
lu-rule/: Cargo.toml
lu-rule/src/: lib.rs  main.rs
portable-algebraic-aotjit/: Cargo.toml
portable-algebraic-aotjit/src/: digest.rs  event.rs  guard.rs  k12.rs  lib.rs  method.rs  replay.rs
(+169 files in other folders)
