[workspace]
resolver = "3"
members = [
    "adsmt-core",
    "adsmt-cert",
    "adsmt-theory",
    "adsmt-class",
    "adsmt-quant",
    "adsmt-abduce",
    "adsmt-engine",
    "adsmt-parser",
    "adsmt-heuristic-checker",
    "adsmt-heuristic-checker-macros",
    "adsmt-lints",
    "adsmt-cli",
    "adsmt-ffi",
    "adsmt-lsp",
    "adsmt-meta",
    # v1.0.0-rc.1 RC1.4.A — logicutils absorption per
    # 21E.2 option 2-A'. 12 crates moved from
    # external/logicutils/ to top-level workspace members.
    "lu-common",
    "freshcheck",
    "stamp",
    "lu-match",
    "lu-expand",
    "lu-query",
    "lu-rule",
    "lu-queue",
    "lu-par",
    "lu-deps",
    "lu-multi",
    "logicutils-translator-to-oxiz-sat",
]
exclude = ["external/oxiz"]

[workspace.package]
# v0.25 → 1.0.0-rc.1 opens **phase 3 of the v1.0 RC roadmap**
# (lsp_roadmap.md). Headline theme: **v1.0 RC bump** — the
# workspace surface freezes at this version under semver
# semantics; further breaking changes require either 1.x major
# bump or RC2 cut.
#
# v1.0.0-rc.1 scope (per `lsp_roadmap.md` §"Phase 3 entry
# conditions"):
#   * RC1.1 — phase 1 + phase 2 sign-off re-verify (done at
#     cycle open; existing audit guards continue to enforce
#     the freeze).
#   * RC1.2 — land carried-over 25B.1 CDCL two-watched
#     literals (substantial inner-loop restructure deferred
#     from v0.23 / v0.25).
#   * RC1.3 — promote 21E.4's forward-looking 1.0.0 marker
#     into a real `#![breaking_changes_semver("1.0.0")]`
#     attribute on `adsmt-ffi/src/lib.rs` + symmetric stamps
#     on `adsmt-cert`, `adsmt-parser` per the phase 3 RC
#     checklist items in each policy doc.
#   * RC1.4 — logicutils absorption per 21E.2 option 2-A':
#     every `lu-*` crate moves into the adsmt workspace,
#     `external/logicutils/` submodule archived after the
#     fold.
#   * RC1.5 — `adsmt-meta` metacrate published.
#   * RC1.6 — `lu-common::migration::v0_to_v1` chained
#     converter shipped.
#   * RC1.H.1 mid-cycle audit + RC1.H.2 RC sign-off (gates
#     v1.0.0 stable bump).
version = "1.0.0-rc.1"
edition = "2024"
license = "BSD-2-Clause OR Apache-2.0 OR LGPL-2.1-or-later"

[workspace.dependencies]
adsmt-core = { path = "adsmt-core" }
adsmt-cert = { path = "adsmt-cert" }
adsmt-theory = { path = "adsmt-theory" }
adsmt-class = { path = "adsmt-class" }
adsmt-quant = { path = "adsmt-quant" }
adsmt-abduce = { path = "adsmt-abduce" }
adsmt-engine = { path = "adsmt-engine" }
adsmt-parser = { path = "adsmt-parser" }
# v1.0.0-rc.1 RC1.4.A — absorbed lu-* path entries. lu-common
# is the most-shared; the rest are consumed by the lu-* CLI
# binary surface preserved under option 2-A'.
lu-common = { path = "lu-common" }

thiserror = "2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.6", features = ["derive"] }
smallvec = "1.13"
indexmap = "2.6"
# v1.0.0-rc.1 RC1.4.A — workspace deps inherited from the
# logicutils sub-workspace so absorbed crates can keep
# `workspace = true` references.
blake3 = "1.8"
crc32fast = "1.5"
crc = "3"
toml = "1.1"
csv = "1.4"
glob = "0.3.3"

[profile.release]
lto = "thin"

# Path A+B Phase 3: route oxiz-sat / oxiz-proof / oxiz-math through
# our fork's `feat/enable-writer` branch until the upstream PR lands.
# The fork is a strict superset (see
# `.claude-memories/oxiz_relationship.md`).
[patch.crates-io]
oxiz-sat = { path = "external/oxiz/oxiz-sat" }
oxiz-proof = { path = "external/oxiz/oxiz-proof" }
oxiz-math = { path = "external/oxiz/oxiz-math" }
