[workspace]
resolver = "3"
members = [
    "adsmt-core",
    "adsmt-cert",
    "adsmt-theory",
    "adsmt-class",
    "adsmt-quant",
    "adsmt-abduce",
    "adsmt-engine",
    "adsmt-parser",
    "adsmt-heuristic-checker",
    "adsmt-heuristic-checker-macros",
    "adsmt-lints",
    "adsmt-cli",
    "adsmt-ffi",
    "adsmt-lsp",
    "adsmt-meta",
    # v1.0.0-rc.1 RC1.4.A — logicutils absorption per
    # 21E.2 option 2-A'. 12 crates moved from
    # external/logicutils/ to top-level workspace members.
    "lu-common",
    "freshcheck",
    "stamp",
    "lu-match",
    "lu-expand",
    "lu-query",
    "lu-rule",
    "lu-queue",
    "lu-par",
    "lu-deps",
    "lu-multi",
    "logicutils-translator-to-oxiz-sat",
]
exclude = ["external/oxiz"]

[workspace.package]
# 1.0.0-rc.1 → 1.0.0-rc.2 — pre-stable audit cycle. RC1 landed
# every phase-3 deliverable; jumping straight to v1.0.0 stable
# would be premature without a dedicated review pass over the
# composed surface. RC2's job is exactly that pass.
#
# v1.0.0-rc.2 scope:
#   * RC2.1 — feature-matrix audit: every `adsmt-meta` feature
#     combination (default / no-cli / only-cli / full) builds
#     clean on its own.
#   * RC2.2 — `cargo publish --dry-run` per workspace member;
#     catches manifest issues the workspace build hides
#     (missing description, license, etc.).
#   * RC2.3 — warning sweep: `mixed_script_confusables`,
#     dead-code, unused-imports across the absorbed
#     workspace. Decide each: silence with #[allow],
#     fix at source, or document as intentional.
#   * RC2.4 — doc audit (`cargo doc --workspace --no-deps`)
#     clean; every public item documented.
#   * RC2.5 — bench re-baseline under the two-watched-
#     literals propagator (RC1.2); refresh both
#     `solver_smoke` and `cdcl_smoke` doc-comment tables.
#   * RC2.6 — runtime smoke test: launch `adsmt-lsp` binary,
#     send initialize / didOpen / hover / completion /
#     definition over stdin/stdout, verify responses.
#   * RC2.H.1 mid-cycle audit + RC2.H.2 final stable sign-off
#     (gates v1.0.0 bump).
version = "1.0.0-rc.11"
edition = "2024"
license = "BSD-2-Clause OR Apache-2.0 OR LGPL-2.1-or-later"
rust-version = "1.96"

[workspace.dependencies]
adsmt-core = { path = "adsmt-core" }
adsmt-cert = { path = "adsmt-cert" }
adsmt-theory = { path = "adsmt-theory" }
adsmt-class = { path = "adsmt-class" }
adsmt-quant = { path = "adsmt-quant" }
adsmt-abduce = { path = "adsmt-abduce" }
adsmt-engine = { path = "adsmt-engine" }
adsmt-parser = { path = "adsmt-parser" }
# v1.0.0-rc.1 RC1.4.A — absorbed lu-* path entries. lu-common
# is the most-shared; the rest are consumed by the lu-* CLI
# binary surface preserved under option 2-A'.
lu-common = { path = "lu-common" }

thiserror = "2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.6", features = ["derive"] }
smallvec = "1.13"
indexmap = "2.6"
# Hash-consing cache backbone (lock-free read-optimised HashIndex
# + EBR weak-ref reclamation).  Used by adsmt-core::term to give
# `Term` the identity-on-Arc property required by the verus-fork
# refactor §2.3 follow-up and by the GF(2) meta-tracing JIT
# (§3.2) guard machinery.
scc = "3"
# v1.0.0-rc.1 RC1.4.A — workspace deps inherited from the
# logicutils sub-workspace so absorbed crates can keep
# `workspace = true` references.
blake3 = "1.8"
crc32fast = "1.5"
crc = "3"
toml = "1.1"
csv = "1.4"
glob = "0.3.3"

[profile.release]
lto = "thin"

# Path A+B Phase 3: route oxiz-sat / oxiz-proof / oxiz-math through
# our fork's `feat/enable-writer` branch until the upstream PR lands.
# The fork is a strict superset (see
# `.claude-memories/oxiz_relationship.md`).
[patch.crates-io]
oxiz-sat = { path = "external/oxiz/oxiz-sat" }
oxiz-proof = { path = "external/oxiz/oxiz-proof" }
oxiz-math = { path = "external/oxiz/oxiz-math" }
