[workspace]
resolver = "3"
members = [
    "adsmt-core",
    "adsmt-cert",
    "adsmt-theory",
    # §3.4 GF(2) Gröbner-basis theory sibling per the
    # verus-fork engine-refactor request (§3.4 of
    # `.local-requests-from/verus-fork/2026-06-04-engine-refactor-and-meta-compiler.md`).
    # Ships both the v0 (Buchberger, dense) and v1 (F4,
    # bit-packed) backends + the FiniteFieldTheory plugin
    # that `Solver::with_finite_field` registers via
    # adsmt-theory::Combination::register.  ZDD (v2) is the
    # next follow-up if a Verus prelude needs ~1k variables.
    "adsmt-theory-finite-field",
    # §3.1 AOT prelude bank — `.luart` v0 binary writer per
    # the verus-fork ack at
    # `.local-replies-from/verus-fork/2026-06-04-3.1-aot-prelude-bank-ack.md`.
    # The writer + topo-sort validator live here at §3.1.A;
    # the lu-smt `--aot-bake` / `--aot-load` CLI surface
    # (§3.1.B + §3.1.D) and the reader (§3.1.C) follow.
    "adsmt-aot",
    # §3.2 meta-tracing JIT with algebraic-invariant guards.
    # The guard-check kernel shares its `reduce` call with §3.4's
    # Gröbner certifier — one kernel, two consumers.
    "adsmt-jit",
    # §3.3 Stålmarck pre-saturation — feeds CDCL a saturated
    # implication graph baked at AOT time so the per-query SAT
    # solve starts with the prelude's propositional skeleton
    # already at fixpoint.
    "adsmt-stalmarck",
    "adsmt-class",
    "adsmt-quant",
    "adsmt-abduce",
    "adsmt-engine",
    # Parser group — pure grammars, no adsmt-core coupling beyond
    # smtlib2's term conversion.
    "adsmt-parsers/adsmt-parser-smtlib2",
    "adsmt-parsers/adsmt-parser-lfsc-drat",
    "adsmt-parsers/adsmt-parser-lu-kb",
    # Shim group — adsmt-side bridges over the pure parsers.
    "adsmt-shims/adsmt-shim-lu-kb",
    # Emit runtime group — language-neutral WASM emitter contract,
    # pnpm-style package manager, and the host runtime that loads
    # emitter packages and feeds them certificates.
    "adsmt-emit/adsmt-emit-contract",
    "adsmt-emit/adsmt-emit-pm",
    "adsmt-emit/adsmt-emit-runtime",
    "adsmt-emit/adsmt-emit-cli",
    "adsmt-emit/adsmt-emit-lean",
    "adsmt-emit/adsmt-env",
    "adsmt-heuristic-checker",
    "adsmt-heuristic-checker-macros",
    "adsmt-lints",
    "adsmt-cli",
    "adsmt-ffi",
    "adsmt-lsp",
    "adsmt-meta",
    # v1.0.0-rc.1 RC1.4.A — logicutils absorption per
    # 21E.2 option 2-A'. 12 crates moved from
    # external/logicutils/ to top-level workspace members.
    "lu-common",
    "freshcheck",
    "stamp",
    "lu-match",
    "lu-expand",
    "lu-query",
    "lu-rule",
    "lu-queue",
    "lu-par",
    "lu-deps",
    "lu-multi",
    "logicutils-translator-to-oxiz-sat",
]
exclude = ["external/oxiz"]

[workspace.package]
# 1.0.0-rc.1 → 1.0.0-rc.2 — pre-stable audit cycle. RC1 landed
# every phase-3 deliverable; jumping straight to v1.0.0 stable
# would be premature without a dedicated review pass over the
# composed surface. RC2's job is exactly that pass.
#
# v1.0.0-rc.2 scope:
#   * RC2.1 — feature-matrix audit: every `adsmt-meta` feature
#     combination (default / no-cli / only-cli / full) builds
#     clean on its own.
#   * RC2.2 — `cargo publish --dry-run` per workspace member;
#     catches manifest issues the workspace build hides
#     (missing description, license, etc.).
#   * RC2.3 — warning sweep: `mixed_script_confusables`,
#     dead-code, unused-imports across the absorbed
#     workspace. Decide each: silence with #[allow],
#     fix at source, or document as intentional.
#   * RC2.4 — doc audit (`cargo doc --workspace --no-deps`)
#     clean; every public item documented.
#   * RC2.5 — bench re-baseline under the two-watched-
#     literals propagator (RC1.2); refresh both
#     `solver_smoke` and `cdcl_smoke` doc-comment tables.
#   * RC2.6 — runtime smoke test: launch `adsmt-lsp` binary,
#     send initialize / didOpen / hover / completion /
#     definition over stdin/stdout, verify responses.
#   * RC2.H.1 mid-cycle audit + RC2.H.2 final stable sign-off
#     (gates v1.0.0 bump).
version = "1.0.0-rc.34.5"
edition = "2024"
license = "BSD-2-Clause OR Apache-2.0 OR LGPL-2.1-or-later"
rust-version = "1.96"

[workspace.dependencies]
adsmt-core = { path = "adsmt-core" }
adsmt-cert = { path = "adsmt-cert" }
adsmt-theory = { path = "adsmt-theory" }
adsmt-theory-finite-field = { path = "adsmt-theory-finite-field" }
adsmt-aot = { path = "adsmt-aot" }
adsmt-class = { path = "adsmt-class" }
adsmt-quant = { path = "adsmt-quant" }
adsmt-abduce = { path = "adsmt-abduce" }
adsmt-engine = { path = "adsmt-engine" }
adsmt-parser-smtlib2 = { path = "adsmt-parsers/adsmt-parser-smtlib2" }
adsmt-parser-lfsc-drat = { path = "adsmt-parsers/adsmt-parser-lfsc-drat" }
adsmt-parser-lu-kb = { path = "adsmt-parsers/adsmt-parser-lu-kb" }
adsmt-shim-lu-kb = { path = "adsmt-shims/adsmt-shim-lu-kb" }
# v1.0.0-rc.1 RC1.4.A — absorbed lu-* path entries. lu-common
# is the most-shared; the rest are consumed by the lu-* CLI
# binary surface preserved under option 2-A'.
lu-common = { path = "lu-common" }

thiserror = "2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# Semantic-version requirement matching for the emit package
# manager (adsmt-emit-pm).
semver = "1.0"
clap = { version = "4.6", features = ["derive"] }
smallvec = "1.13"
indexmap = "2.6"
# Hash-consing cache backbone (lock-free read-optimised HashIndex
# + EBR weak-ref reclamation).  Used by adsmt-core::term to give
# `Term` the identity-on-Arc property required by the verus-fork
# refactor §2.3 follow-up and by the GF(2) meta-tracing JIT
# (§3.2) guard machinery.
scc = "3"
# v1.0.0-rc.1 RC1.4.A — workspace deps inherited from the
# logicutils sub-workspace so absorbed crates can keep
# `workspace = true` references.
blake3 = "1.8"
crc32fast = "1.5"
crc = "3"
toml = "1.1"
csv = "1.4"
glob = "0.3.3"
# SHA-256 of the AOT prelude text.  Per the verus-fork ack §8.3
# of the §3.1 prelude bank counter-proposal, the `.luart` v0
# header records the SHA-256 of the prelude text the artifact
# was baked from; the reader cross-checks on `--aot-load`.
sha2 = "0.10"
# §3.2 meta-tracing JIT crate — algebraic-invariant guards over
# the shared GF(2) Gröbner kernel.
adsmt-jit = { path = "adsmt-jit" }
# §3.3 Stålmarck pre-saturation — AOT-time propositional
# implication-graph saturator.
adsmt-stalmarck = { path = "adsmt-stalmarck" }
# §3.2 dynasm-rs JIT compiled-kernel emit — runtime assembler
# DSL for the meta-tracing JIT's specialised propagation kernel
# fragments.  x86_64 + aarch64 + riscv64 emit paths are all
# wired in (per the upstream README's supported-arch list);
# every other host triple compiles the `kernel` module's
# `UnsupportedHostTriple` stub.  Cross-arch CI exercises the
# AArch64 + RISC-V emitters under QEMU `binfmt_misc` shims.
# v5.0.0 is the minimum-version floor — see
# `feedback_dynasm_min_version.md` for the rationale.
dynasmrt = "5.0.0"
dynasm = "5.0.0"

[profile.release]
lto = "thin"

# Path A+B Phase 3: route oxiz-sat / oxiz-proof / oxiz-math through
# our fork's `feat/enable-writer` branch until the upstream PR lands.
# The fork is a strict superset (see
# `.claude-memories/oxiz_relationship.md`).
[patch.crates-io]
oxiz-sat = { path = "external/oxiz/oxiz-sat" }
oxiz-proof = { path = "external/oxiz/oxiz-proof" }
oxiz-math = { path = "external/oxiz/oxiz-math" }
