[package]
name = "adsmt-cert"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "S-expression proof certificate format + Lean4 source reflection. ITP emits to other targets (Rocq, Isabelle, …) live in out-of-tree projects"

[dependencies]
adsmt-core.workspace = true
thiserror.workspace = true
indexmap.workspace = true
oxiz-proof = { version = "0.2", optional = true }
adsmt-heuristic-checker-macros = { path = "../adsmt-heuristic-checker-macros" }

[features]
default = []
# Bridge to oxiz-proof for DRAT / Alethe / Coq / Lean export.
# Path A+B, P3 — see .claude-memories/oxiz_relationship.md.
oxiz-proof = ["dep:oxiz-proof"]
