[package]
name = "adsmt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "lu-smt: command-line driver for adsmt"

[[bin]]
name = "lu-smt"
path = "src/main.rs"

[dependencies]
adsmt-core.workspace = true
adsmt-cert.workspace = true
adsmt-engine.workspace = true
adsmt-parser.workspace = true
adsmt-theory.workspace = true
# §3.4 GF(2) Gröbner-basis theory sibling — opt-in via
# `--finite-field-periodic N` / `--finite-field-budget-exhaustion`
# CLI flags or `(set-option :finite-field-periodic N)` /
# `(set-option :finite-field-budget-exhaustion true)` SMT-LIB
# options.  Both routes wire the plugin into the engine via
# `Solver::with_finite_field` / `Solver::register_theory`.
adsmt-theory-finite-field.workspace = true
# §3.1 AOT prelude bank — `--aot-bake` writes a `.luart` v0
# artifact and `--aot-load` reads it back into the solver as a
# pre-asserted prelude (§3.1.B / §3.1.C / §3.1.D).
adsmt-aot.workspace = true
# §3.5.G — `--jit-trace-emit` / `--jit-trace-load` consume the
# `adsmt-jit::CdclTrace` + cdcl_io reader/writer.
adsmt-jit.workspace = true
# Re-exported through adsmt-engine's SatResult::Abductive payload
# (Vec<RankedCandidate>). Listed explicitly so the CLI can call the
# ranking type's fields by name without going through engine privacy.
adsmt-abduce.workspace = true
# dead-pattern audit JSON for --audit-json.
adsmt-lints = { version = "=1.0.0-rc.16", path = "../adsmt-lints" }
# SHA-256 of the bake input — recorded in the `.luart` header per
# the verus-fork ack §8.3 of the §3.1 counter-proposal.
sha2.workspace = true
clap.workspace = true
# Serialises ranked abductive candidates to stdout — one single-line
# JSON object per check-sat that returned `Abductive`.
serde_json.workspace = true
thiserror.workspace = true
