[package]
name = "adsmt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "lu-smt: command-line driver for adsmt"

[[bin]]
name = "lu-smt"
path = "src/main.rs"

[dependencies]
adsmt-core.workspace = true
adsmt-cert.workspace = true
adsmt-engine.workspace = true
# Canonical cert wire codec (CBOR/JSON) for `--emit-cert`, matching
# what the adsmt-emit emitters decode.
adsmt-emit-contract = { version = "=1.0.0-rc.33", path = "../adsmt-emit/adsmt-emit-contract" }
adsmt-parser-smtlib2.workspace = true
adsmt-theory.workspace = true
# §3.4 GF(2) Gröbner-basis theory sibling — opt-in via
# `--finite-field-periodic N` / `--finite-field-budget-exhaustion`
# CLI flags or `(set-option :finite-field-periodic N)` /
# `(set-option :finite-field-budget-exhaustion true)` SMT-LIB
# options.  Both routes wire the plugin into the engine via
# `Solver::with_finite_field` / `Solver::register_theory`.
adsmt-theory-finite-field.workspace = true
# §3.1 AOT prelude bank — `--aot-bake` writes a `.luart` v0
# artifact and `--aot-load` reads it back into the solver as a
# pre-asserted prelude (§3.1.B / §3.1.C / §3.1.D).
adsmt-aot.workspace = true
# §3.5.G — `--jit-trace-emit` / `--jit-trace-load` consume the
# `adsmt-jit::CdclTrace` + cdcl_io reader/writer.
adsmt-jit.workspace = true
# §3.3 / §3.5.A v1.1 — Stålmarck phase 2 saturation feeds the
# bake-side `.luart-cdcl` v1 section's `stalmarck_edges`
# trailing payload.
adsmt-stalmarck.workspace = true
# Re-exported through adsmt-engine's SatResult::Abductive payload
# (Vec<RankedCandidate>). Listed explicitly so the CLI can call the
# ranking type's fields by name without going through engine privacy.
adsmt-abduce.workspace = true
# dead-pattern audit JSON for --audit-json.
adsmt-lints = { version = "=1.0.0-rc.33", path = "../adsmt-lints" }
# SHA-256 of the bake input — recorded in the `.luart` header per
# the verus-fork ack §8.3 of the §3.1 counter-proposal.
sha2.workspace = true
clap.workspace = true
# Serialises ranked abductive candidates to stdout — one single-line
# JSON object per check-sat that returned `Abductive`.
serde_json.workspace = true
thiserror.workspace = true
# rc.30 (Y4) — in-process OxiZ delegation backend.  When the native
# engine can't decide an obligation (vstd-scale quantifier
# encodings), the `oxiz` feature routes the buffered SMT-LIB through
# `oxiz_solver::Context::execute_script` directly (no subprocess).
# Path dep into the vendored OxiZ tree (external/oxiz, excluded from
# the adsmt workspace).  Default-off so the lean build pulls nothing.
oxiz-solver = { path = "../external/oxiz/oxiz-solver", optional = true }

[features]
# Build with `cargo build -p adsmt-cli --features oxiz` (or
# `--release`) to get the in-process OxiZ delegation.  Without it,
# delegation falls back to the `ADSMT_OXIZ_PATH` subprocess oracle.
oxiz = ["dep:oxiz-solver"]
