[package]
name = "adsmt-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DPLL(T) main loop with incremental push/pop, theory combination glue, and the public Solver API"

[dependencies]
adsmt-core.workspace = true
adsmt-cert.workspace = true
adsmt-theory.workspace = true
adsmt-class.workspace = true
adsmt-quant.workspace = true
adsmt-abduce.workspace = true
thiserror.workspace = true
indexmap.workspace = true
cadical = { version = "0.1", optional = true }

[features]
default = []
# Use the CaDiCaL SAT backend instead of the built-in DPLL.
# Build with: `cargo build -p adsmt-engine --features cadical`
cadical = ["dep:cadical"]
