[package]
name = "adsmt-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DPLL(T) main loop with incremental push/pop, theory combination glue, and the public Solver API"

[dependencies]
adsmt-core.workspace = true
adsmt-cert.workspace = true
adsmt-theory.workspace = true
adsmt-theory-finite-field.workspace = true
# §3.1.D AOT prelude bank — `Solver::with_aot_prelude` consumes
# the reconstructed prelude bytes from a `.luart` artifact.
adsmt-aot.workspace = true
# §3.5.F — `Solver::replay_aot_cdcl_trace` shares the JIT crate's
# `JitGuard` / `check_guard` / `CdclTrace` vocabulary with the
# §3.2 / §3.5.D recorder.
adsmt-jit.workspace = true
adsmt-class.workspace = true
adsmt-quant.workspace = true
adsmt-abduce.workspace = true
# §3.5.J slim/digest — KangarooTwelve-256 for the canonical
# clause-set digest the `--jit-trace-load` consult compares (a 32-byte
# exact-match certificate, replacing the megabyte GF(2) basis).
lu-common = { version = "=1.0.0-rc.34.5", path = "../lu-common", default-features = false, features = ["k12"] }
thiserror.workspace = true
indexmap.workspace = true
cadical = { version = "0.1", optional = true }
oxiz-sat = { version = "0.2", optional = true }
oxiz-proof = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "solver_smoke"
harness = false

[[bench]]
name = "cdcl_smoke"
harness = false

[features]
default = []
# Use the CaDiCaL SAT backend (C++ FFI) instead of the built-in DPLL.
# Build with: `cargo build -p adsmt-engine --features cadical`
cadical = ["dep:cadical"]
# Use OxiZ's Pure-Rust CDCL SAT backend.
# Build with: `cargo build -p adsmt-engine --features oxiz`
# Path A+B: this is the strategic default once stabilized
# (see .claude-memories/oxiz_relationship.md).
oxiz = ["dep:oxiz-sat"]
# Also pull in oxiz-proof for Alethe/LFSC byte-form proof emission
# (v0.15 P3) and the P4 cert ⇄ oxiz-proof rich bridge. Implies
# `oxiz` and turns on adsmt-cert's matching feature so the
# `oxiz_drat_bridge::bridge` module is callable.
oxiz-proof = ["oxiz", "dep:oxiz-proof", "adsmt-cert/oxiz-proof"]
# Enable external `drat-trim` binary cross-check verification of
# the DRAT bytes produced under the `oxiz` feature. drat-trim must
# be available on `$PATH`; otherwise the check returns
# `DratTrimError::BinaryUnavailable`. v0.15 P3 follow-up.
drat-trim = []
