[package]
name = "adsmt-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C ABI exports for Lean4 / Python / WASM bindings"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
adsmt-core.workspace = true
adsmt-engine.workspace = true
adsmt-parser.workspace = true
