[package]
name = "adsmt-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C ABI exports for ITP / language bindings. Active consumer surface frozen pending the dual-ITP `leo4` binding library; see memory `oxiz_relationship.md`"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
adsmt-core.workspace = true
adsmt-engine.workspace = true
adsmt-parser.workspace = true
adsmt-heuristic-checker-macros = { version = "=1.0.0-rc.13", path = "../adsmt-heuristic-checker-macros" }
