[package]
name = "adsmt-heuristic-checker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Per-user-crate validator for adsmt classical-axiom heuristic extensions. Consumes a frozen minimum-table IR and checks user-defined lu-kb heuristics against it via adsmt's theory layer."
build = "build.rs"

[build-dependencies]
# Build-time SAT verification of the shipped minimum table —
# the translator hands the parsed module to oxiz-sat, the
# verdict gates a successful build.
lu-common = { version = "=1.0.0-rc.35.1", path = "../lu-common", default-features = false }
logicutils-translator-to-oxiz-sat = { version = "=1.0.0-rc.35.1", path = "../logicutils-translator-to-oxiz-sat" }
oxiz-sat = { path = "../external/oxiz/oxiz-sat" }

[dependencies]
adsmt-core.workspace = true
adsmt-cert.workspace = true
adsmt-theory.workspace = true
# lu-common provides K12-256 for the frozen-hash safeguard and the
# kb AST that user-extension heuristics are written in.
lu-common = { version = "=1.0.0-rc.35.1", path = "../lu-common", default-features = false, features = ["k12"] }
# Proc-macro entry points for compile-time heuristic embedding.
# Re-exported through the `macros` module so users see a single
# import surface (`use adsmt_heuristic_checker::*`).
adsmt-heuristic-checker-macros = { version = "=1.0.0-rc.35.1", path = "../adsmt-heuristic-checker-macros" }
thiserror.workspace = true

# `breaking_changes_semver` attributes are tracked by the
# `#![breaking_changes_semver("x.y.z")]` inner attribute on
# `src/lib.rs`. The newest attribute auto-sets the lower bound for
# compatibility checks (see prover_emit_policy.md § "Per-user IR
# cache"). At v0.21.0 the list registers the first forward-looking
# v1.0.0 entry per 21E.4.

# Peer source τ for the breaking-version safeguard. Mirrors
# `src/lib.rs`'s `#![breaking_changes_semver(...)]` attributes,
# `.breaking-versions.lock`, and `breaking_history.txt`. Cross-
# check at build/test time catches divergence. v0.21.0 adds the
# first 1.0.0 marker per the v1.0 transition plan (21E.4) — see
# the corresponding entries in `.breaking-versions.lock` and
# `breaking_history.txt`.
[package.metadata.adsmt]
breaking_versions = ["1.0.0"]
