[package]
name = "adsmt-jit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Meta-tracing JIT with algebraic-invariant guards (§3.2 of the verus-fork engine-refactor + meta-compiler proposal)"

[dependencies]
adsmt-core.workspace = true
# Shares the GF(2) Gröbner kernel with §3.4: a recorded
# polynomial-invariant guard re-uses the same `reduce` /
# `s_polynomial` machinery that certifies UNSAT in the theory
# layer.  This sharing is the key engineering claim in §3.5 of
# the proposal — one kernel, two consumers.
adsmt-theory-finite-field.workspace = true
# §3.2 dynasm-rs runtime assembler — emits specialised
# propagation kernel fragments at trace-replay time.  Only the
# x86_64 host triple has a working code generator at v0.x;
# other triples surface an `UnsupportedHostTriple` error from
# `KernelStore::register_emitted` at register time.
dynasmrt.workspace = true
dynasm.workspace = true
# Portable core extracted from this crate + the engine's AOT
# helpers. adsmt-jit is now the in-tree adapter: it re-exports the
# portable `CdclTraceEvent` / digest / FF-free guards / replay
# interpreter and adds the `adsmt_core::Term`-coupled superset
# (GF2Snapshot, the `PolyInvariant` guard, `SkeletonShape::of`,
# the `.lutrace` wire format, kernel/registry).
portable-algebraic-aotjit.workspace = true
