[package]
name = "adsmt-lints"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime audit library for adsmt certificate hygiene checks. Dead pattern detection, IDE-friendly JSON diagnostics, future lu-kb-side audits."

[lib]
crate-type = ["rlib"]

[dependencies]
adsmt-cert = { workspace = true }
adsmt-core = { workspace = true }
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
